<resources>
    <string name="app_name">Tuner</string>
    <string name="play_button">Play</string>
    <string name="stop_button">Stop</string>
    <string name="hello_world">Hello World</string>
    <string name="recording">Recording</string>
    <string name="start_recording_something">Start Recording Something</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="frequency">Frequency</string>
</resources>