<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="150dp"

        android:text="@string/start_recording_something"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/record_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"

        android:layout_marginTop="50dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.012" />

    <Button
        android:id="@+id/stop_recording_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="@+id/record_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/record_button"
        android:layout_marginEnd="50dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/recording"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/play_button"

        app:layout_constraintStart_toStartOf="@+id/record_button"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/stop_button"

        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/play_button"
        android:layout_marginEnd="50dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>